--- a/zago/assets/translations/vi-VN.json
+++ b/zago/assets/translations/vi-VN.json
@@ -3,6 +3,7 @@
     "message": "Tin nhắn",
     "contact": "Danh bạ",
     "diary" : "Nhật ký",
-    "personal" : "Cá nhân"
+    "personal" : "Cá nhân",
+    "search" : "Tìm kiếm bạn bè, tin nhắn..."
     }
 }
