xu ly man hinh message

--- a/zago/assets/translations/en-US.json
+++ b/zago/assets/translations/en-US.json
@@ -5,5 +5,10 @@
         "diary" : "Timeline",
         "personal" : "Me",
         "search" : "Search friends, messages..."
-    }
+    },
+   "message" : {
+       "hour" : "hour"
+   } 
+
+
 }
